Leap of Fangs: Solve horizontal scroll, use iscroll regions. Hide quit button temporarily

--- a/templates/leapOfFangs/less/leapOfFangs.less
+++ b/templates/leapOfFangs/less/leapOfFangs.less
@@ -143,7 +143,7 @@ ul {
 
 #menus-container {
     overflow: hidden;
-    width: @externalWidth - (2 * 20) - 120; // 2 * footer padding, quit button width + margin
+    display: inline-block;
 }
 
 #category-menu, #currency-menu {
